src/objects/DRDP_Admin_Console__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check messages to be displayed in the content page</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Page_TF__c</fullName>
        <formula>LOWER(SUBSTITUTE(TRIM(TEXT(Type__c)), &apos; &apos; ,&apos;&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page_TF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Links Page</fullName>
                </value>
                <value>
                    <fullName>About Digital R&amp;D Workbench</fullName>
                </value>
                <value>
                    <fullName>Search Tips Page</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Digital Foundry Help Content</label>
    <listViews>
        <fullName>About_Digital_R_D_Workbench</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Content__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>About Digital R&amp;D Workbench</value>
        </filters>
        <label>About Digital R&amp;D Workbench</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Content__c</columns>
        <columns>Page_TF__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Links_Page</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Content__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Links Page</value>
        </filters>
        <label>Links Page</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Foundry Help Content</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>